<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.rachelyiak.todolistkotlin.MainActivity">
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/delete_all"
        android:visible="true"
        app:showAsAction="never"/>
</menu>
